fix suggested modpacks on home titles getting cut off

--- a/style.css
+++ b/style.css
@@ -3522,6 +3522,7 @@ dialog[open]::backdrop {
     font-size: 1.2rem;
     font-weight: bold;
     text-align: center;
+    word-break: break-word;
 }
 
 .home-discover-image {
